--- a/package.json
+++ b/package.json
@@ -1,28 +1,49 @@
 {
-  "name": "card-management",
-  "version": "0.1.0",
+  "name": "task-board",
+  "version": "1.0.0",
+  "description": "A modern drag-and-drop task management board",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf .next node_modules",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@types/node": "18.15.11",
-    "@types/react": "17.0.53",
-    "@types/react-beautiful-dnd": "13.1.8",
-    "@types/react-dom": "17.0.19",
-    "autoprefixer": "10.4.14",
-    "next": "12.3.4",
-    "postcss": "8.4.23",
-    "react": "17.0.2",
-    "react-beautiful-dnd": "13.1.1",
-    "react-dom": "17.0.2",
-    "tailwindcss": "3.3.1",
-    "typescript": "4.9.5"
-  }
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/task-board"
+  },
+  "keywords": [
+    "task-management",
+    "drag-and-drop",
+    "next.js",
+    "react",
+    "typescript",
+    "tailwindcss"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
